horizontal scroll bug fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -248,6 +248,9 @@
 
 
 @media only screen and (max-width: 768px) {
+html, body{
+  overflow-x: hidden;
+}
 
   .project-section{
     .container{
